<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ltl Hunting Camera Tool</string>
    <string name="delcamera">Delete camera</string>
    <string name="editcamera">Edit camera</string>
    <string name="Ok">Ок</string>
    <string name="title_addcamera">Add new camera</string>
    <string name="title_activity_edit_camera">Edit Camera</string>
    <string name="title_activity_camera_control">cameraControl</string>
    <string name="title_activity_camera_view">Camera View</string>
    <string name="title_activity_service_dialog1">ServiceDialog1</string>
    <string name="title_activity_camera_control2">Ltl Acorn SMS control</string>
    <string name="mainactbtnaddcamera">Add camera</string>
    <string name="maintxtaddcamera">Please add camera</string>
    <string name="addcameraphone">Enter SIM card number \n +(country code)number </string>
    <string name="addcameraname">Camera name/address or another info </string>
 />                                                            <string name="writedata">Data writing... </string>
 />                                                            <string name="readdata">Data reading...</string>
 />                                                            <string name="wrongnumber">The phone number is incorrect</string>
 />                                                            <string name="exit">Exit?</string>
 />                                                            <string name="noSMSyet">No SMS</string>
 />                                                            <string name="noMMSyet">No MMS</string>
 />                                                            <string name="getfoto">Get foto</string>
 />                                                            <string name="SMScontrol">SMS control</string>
 />                                                            <string name="cameraedit">Edit \n camera</string>
 />                                                            <string name="fotoreceived">photo received:</string>
 />                                                            <string name="smsreceived">SMS received: </string>
    <string name="mode">Mode: </string>
    <string name="fotosize">Foto size:</string>
    <string name="videosize">Video size:</string>
    <string name="fotonumber">Foto quantity:</string>
    <string name="videolength">Video length</string>
    <string name="delay">Delay</string>
    <string name="serial">Camera name:</string>
    <string name="sense">Sensor sensitivity:</string>
    <string name="timelapse">Time lapse:</string>
    <string name="sidePIR">Side PIR:</string>
    <string name="mmstype">MMS type:</string>
    <string name="mmslimit">MMS limit:</string>
    <string name="timer">Timer:</string>
    <string name="timer2">Timer2:</string>
    <string name="phone2">phone2 or e-mail</string>
    <string name="phone3">phone3 or e-mail</string>
    <string name="email">email</string>
    <string name="smsinterval">SMS receiving interval:</string>
    <string name="delcamconf">Delete camera?</string>
    <string name="SMScntrl">SMS control</string>
    <string name="smsoff">Are you sure you want to \nturn off SMS control? \nRemote activation of SMS \ncontrol is not possible!</string>
    <string name="sure">Yes, sure!</string>
    <string name="read">Read</string>
    <string name="about">About application</string>
    <string name="version">Version 3.0 by Andy Adamoff \nSupport: \nandrej.adamoff@gmail.com</string>
    <string name="downloadMMS">Searching new \nMMS photo...</string>
    <string name="downloadSMTP">Downloading new \nphoto from email ...</string>
    <string name="received">Received</string>
    <string name="from">from</string>
    <string name="smtpTo">Receiving Email</string>
    <string name="smtpToPwd">Receiving Email password</string>
    <string name="smtpFrom">Camera sending email</string>
    <string name="sms_sent">SMS sent:</string>
    <string name="samenumber">The phone number is already used</string>
    <string name="downloadnewsmtp">Downloading photos \nfrom email box...</string>
    <string name="downloadnewmms">Searching MMS \nin phone...</string>
    <string name="phonenumber_pref">Camera SIM card number</string>
    <string name="phonesummary">+(country code) phone number</string>
    <string name="enterphone">Enter phone number</string>
    <string name="cameraname">Camera name</string>
    <string name="namesummary">Camera name or other info</string>
    <string name="smtpusage">Get Email photos</string>
    <string name="smtpsummary">Enable if camera sends SMTP photos</string>
    <string name="smtpfromsummary">from this email camera sends SMTP foto</string>
    <string name="smtptosummary">One email for all cameras. Gmail is recommended</string>
    <string name="mms">Get MMS photo</string>
    <string name="sms">Get SMS</string>
    <string name="smtprefresh">Refresh photo gallery at opening</string>
    <string name="mmsrefresh">Refresh MMS gallery</string>
    <string name="mmsrefreshsummary">Search new MMS in the phone when camera photo gallery opens</string>
    <string name="smtppush">Gmail instant photo autodownload</string>
    <string name="smtppushsummary">The feature has been tested with Gmail only. Requires Internet connection always on.</string>
    <string name="pushwarning">For usage of Gmail photos autodownload feature please check the following: \n1. Gmail IMAP access is enabled \n2. Google specific "Access for less secure apps" is turned on \n3. "Data connection" or WiFI at your phone is always on</string>
    <string name="mmssummary">Enable if camera sends MMS photo</string>
    <string name="smssummary">Enable if camera sends SMS</string>
    <string name="mmswarning">Stop photo searching?</string>
    <string name="wronglogin">Error connecting Email. Please check login and Internet connection.</string>
    <string name="title_activity_help">Help</string>
    <string name="imap_ticker">Email autodownload is disabled</string>
    <string name="imap_title">Connection to email imap folder is lost</string>
    <string name="imap_text">due to network problems. Check your balance and disable/enable Data Connection</string>
    <string name="notif_ticker">New hunting camera photo</string>
    <string name="notif_title">new email photo(s) from:</string>
    <string name="smtp_toast">Unable download photos from email. \nCheck email login or Internet connection.</string>
    <string name="smtp_toast1">Downloaded</string>
    <string name="smtp_toast2">new photo(s) from email box</string>
    <string name="smtprefreshsummary">Search new fotos in Email box when photo gallery opens.</string>
    <string name="learn_imap">Learn here how to enable IMAP for Gmail</string>
    <string name="learn_lesssecure">Learn here how to turn on "access for less secure apps" for Gmail</string>
    <string name="addcamera">Add camera</string>
    <string name="online">Always online</string>
    <string name="onlinesummary">This does not allow the phone to sleep to be 24 hours connected to email box. But it causes increased battery drain.</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9367463267962842/9792773013</string>
    <string name="camtype">Camera type</string>

    <string-array name="a_camtype" translatable="false">
        <item>Ltl Acorn </item>
        <item>SiFar </item>
        <item>Other </item>
    </string-array>
    <string-array name="b_camtype" translatable="false">
        <item>acorn</item>
        <item>sifar</item>
        <item>other</item>
    </string-array>

    <string name="camtype_sum">Choose camera type</string>
    <string name="title_activity_sifar_control">Sifar camera SMS control</string>
    <string name="title_activity_other_control">camera SMS control</string>
    <string name="smscntrl">SMS control</string>
    <string name="other_editcommand">Edit commands</string>
    <string name="btngetphoto">Set button "Get Photo"</string>
    <string name="cancel">Cancel</string>
    <string name="sendsms">Send SMS</string>
    <string name="com1">enter command 1</string>
    <string name="com2">enter command 2</string>
    <string name="com3">enter command 3</string>
    <string name="com4">enter command 4</string>
    <string name="com5">enter command 5</string>
    <string name="com6">enter command 6</string>
    <string name="com7">enter command 7</string>
    <string name="com8">enter command 8</string>
    <string name="com9">enter command 9</string>
    <string name="com10">enter command 10</string>
    <string name="val1">value 1</string>
    <string name="val2">value 2</string>
    <string name="val3">value 3</string>
    <string name="val4">value 4</string>
    <string name="val5">value 5</string>
    <string name="val6">value 6</string>
    <string name="val7">value 7</string>
    <string name="val8">value 8</string>
    <string name="val9">value 9</string>
    <string name="val10">value 10</string>
    <string name="ph1">Phone 1: </string>
    <string name="ph2">Phone 2:</string>
    <string name="ph3">Phone 3:</string>
    <string name="ph4">Phone 4:</string>
    <string name="comnotconf">Command is not configured.  \nLong click the command to configure it</string>
    <string name="sendingsms">SMS sending...</string>
    <string name="btngetfotonotconf">Button Get Photo is not configured.  \nLong click the button to configure it</string>
    <string name="downloaded">Downloaded</string>
    <string name="newphoto">new photo(s) from email box</string>
    <string name="entercomname">enter here command name</string>
    <string name="entervalue">enter here value for the command</string>
    <string name="entersms">enter here sms for the command</string>
    <string name="phone">phone</string>
    <string name="bfphone">before phone</string>
    <string name="aftphone">after phone</string>
    <string name="bfmail">before email</string>
    <string name="aftemail">after email</string>
    <string name="setmail">enter here email address</string>
    <string name="sendphone">enter here phone to send</string>
    <string name="setbtnphoto">enter here sms for the command "get photo"</string>
    <string name="titlesetcom">Set command</string>
    <string name="titlesetphone">Set command "Phone for receiving photos"</string>
    <string name="titlesendphone">Set phone number where photos sent</string>
    <string name="titlesendemail">Set email address where photos sent</string>
    <string name="titlesetemail">Set command "Email for receiving photos"</string>
    <string name="titlesendcom">Send SMS</string>
    <string name="www">www.huntingcamera.eu</string>

</resources>
