<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editcommand"
        android:editable="true"
        android:enabled="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/entercomname" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editvalue"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/entervalue" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editsms"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/entersms" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText55"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/setmailbutton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignTop="@+id/setmailbutton1"
            android:layout_toEndOf="@+id/setmailbutton1"
            android:layout_alignParentRight="true"
            android:layout_weight="5"
            android:textSize="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp" />

        <Button
            android:id="@+id/setmailbutton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Ok"
            android:layout_below="@+id/editText55"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="5"
            android:textSize="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="2dp" />
    </LinearLayout>



</LinearLayout>