<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffe5e5e5"
    android:gravity="center_horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/oll1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sendmail"
            android:hint="@string/setmail"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oll2"
        android:layout_below="@+id/oll1">

        <Button
            android:id="@+id/setmailbutton2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignTop="@+id/setmailbutton1"
            android:layout_toEndOf="@+id/setmailbutton1"
            android:layout_alignParentRight="true"
            android:layout_weight="5"
            android:textSize="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2dp" />

        <Button
            android:id="@+id/setmailbutton1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sendsms"
            android:layout_below="@+id/editText55"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="5"
            android:textSize="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="2dp" />
    </LinearLayout>

</RelativeLayout>